# ReiyaAccountManager

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser_extractor.rs  lib.rs  main.rs
src/components/: Icons.tsx  SessionGraph.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx
src/context/: BootstrapperContext.tsx  LanguageContext.tsx  ThemeContext.tsx  UpdateContext.tsx
src/data/: catalog.ts
src/pages/: Accounts.tsx  AppLock.tsx  Bootstrapper.tsx  Home.tsx  Hub.tsx  KeyGate.tsx  LaunchProgress.tsx  Onboarding.tsx  Settings.tsx  Theme.tsx  UpdatePrompt.tsx  Utilities.tsx
