[package]
name = "tauri-app"
version = "1.0.13"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
sysinfo = "0.33"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
hostname = "0.4"
tokio = { version = "1", features = ["time", "fs", "io-util"] }
url = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2"
md5 = "0.7"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }
